--- a/gb/19/6/3/n11297260.md
+++ b/gb/19/6/3/n11297260.md
@@ -1,23 +1,23 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/faflev3861/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/faflev3861/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/faflev3861/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/faflev3861/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/faflev3861/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/faflev3861/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/faflev3861/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/faflev3861/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/faflev3861/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/faflev3861/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/faflev3861/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/faflev3861/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/faflev3861/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/faflev3861/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/faflev3861/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>新州寿司店前老板克扣工资被罚逾38万</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年06月03日讯】（大纪元记者肖婕<ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）新州三家寿司店的前老板因克扣员工的最低工资、临时工资和加班工资，被新州公平工作专员署（FWO）告上法庭，法庭已判罚这名前老板及其公司38万多澳元。</p>
+<p>【大纪元2019年06月03日讯】（大纪元记者肖婕<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）新州三家寿司店的前老板因克扣员工的最低工资、临时工资和加班工资，被新州公平工作专员署（FWO）告上法庭，法庭已判罚这名前老板及其公司38万多澳元。</p>
 <p>公平工作专员署经调查发现，有证据表明，2016年期间，新州戈斯福德（Gosford）、埃里纳（Erina）、纽卡素（Newcastle）的弗莱彻（Fletcher）东京寿司店（Tokyo Sushi）店主长谷川（Kiyoshi Hasegawa）短付了31名员工的工资，这些员工包括低职员工和持签证的移民工。</p>
-<p>在判决时，联邦巡回法庭法官道迪（Philip Dowdy）说，老板“没有任何理由”可以<ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E5%89%A5%E5%89%8A.md#1">剥削</a>员工和少付员工工资。</p>
-<p>长谷川个人被<ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E7%BD%9A%E6%AC%BE.md#1">罚款</a>63,936元，她的两个家族公司分别被罚款150,120元和169,000元，总计罚款383,056元。</p>
-<p>移民工特别工作组的报告发现，<ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>近88万名移民工中，多达一半的人可能被少付了工资。</p>
-<p>公平工作专员帕克（Sandra Parker）表示，持临时签证的人最容易受到<ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E5%89%A5%E5%89%8A.md#1">剥削</a>。她警告说，公平工作专员署正在将打击快餐业<ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E5%85%8B%E6%89%A3%E5%91%98%E5%B7%A5%E5%B7%A5%E8%B5%84.md#1">克扣员工工资</a>作为工作的一个重点。</p>
+<p>在判决时，联邦巡回法庭法官道迪（Philip Dowdy）说，老板“没有任何理由”可以<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%89%A5%E5%89%8A.md#1">剥削</a>员工和少付员工工资。</p>
+<p>长谷川个人被<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%BD%9A%E6%AC%BE.md#1">罚款</a>63,936元，她的两个家族公司分别被罚款150,120元和169,000元，总计罚款383,056元。</p>
+<p>移民工特别工作组的报告发现，<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>近88万名移民工中，多达一半的人可能被少付了工资。</p>
+<p>公平工作专员帕克（Sandra Parker）表示，持临时签证的人最容易受到<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%89%A5%E5%89%8A.md#1">剥削</a>。她警告说，公平工作专员署正在将打击快餐业<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%85%8B%E6%89%A3%E5%91%98%E5%B7%A5%E5%B7%A5%E8%B5%84.md#1">克扣员工工资</a>作为工作的一个重点。</p>
 <p>帕克对澳洲广播公司说：“如果移民工因为签证的原因不愿投诉，或者他们不知道自己的工作场所权利，那么他们最容易受到剥削。”</p>
-<p>“我们对雇主公然克扣弱势员工工资的行为特别注重，这一点得到了法庭判处高额<ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E7%BD%9A%E6%AC%BE.md#1">罚款</a>的支持。”她说，“检查人员将继续对快餐店、餐厅和咖啡馆进行有针对性的审查，如果雇主没有履行其合法义务，我们将追究其责任。”</p>
+<p>“我们对雇主公然克扣弱势员工工资的行为特别注重，这一点得到了法庭判处高额<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%BD%9A%E6%AC%BE.md#1">罚款</a>的支持。”她说，“检查人员将继续对快餐店、餐厅和咖啡馆进行有针对性的审查，如果雇主没有履行其合法义务，我们将追究其责任。”</p>
 <p>东京寿司店总共少付员工7万多元，其中包括克扣工作日最低工资、临时工资和周末及公共假期加班工资。</p>
 <p>长谷川的两个家族公司也因违犯退休金权利、记录保存和最低聘用期义务的法律被罚款。</p>
 <p>法官道迪已勒令长谷川及其两家公司在28天之内给员工补发工资。</p>
 <p>自从2017年7月以来，长谷川及其公司已不再经营在戈斯福德的东京寿司店。</p>
-<p>公平工作专员署在对新州和昆州东南部的40家寿司店进行调查时，发现了一系列<ahref="https://github.com/faflev3861/djy/blob/master/gb/tag/%E5%85%8B%E6%89%A3%E5%91%98%E5%B7%A5%E5%B7%A5%E8%B5%84.md#1">克扣员工工资</a>的现象。</p>
+<p>公平工作专员署在对新州和昆州东南部的40家寿司店进行调查时，发现了一系列<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%85%8B%E6%89%A3%E5%91%98%E5%B7%A5%E5%B7%A5%E8%B5%84.md#1">克扣员工工资</a>的现象。</p>
 <p>责任编辑：瑞木悦</p>
 <p>&nbsp;</p>
 
@@ -25,47 +25,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/16/8/3/n8165054.md#1">韩国清洁工时薪15元 悉尼雇主称“社区行情”</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/17/1/27/n8751969.md#1">Pizza Hut克扣送餐司机? 送一次外卖仅挣不到6元</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/17/8/19/n9545213.md#1">年轻打工族现状：收入低安全隐患多</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/17/11/28/n9901520.md#1">澳洲公司克扣工资遭罚 官方鼓励留学生维权</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/18/4/9/n10287840.md#1">克扣工资 著名意大利餐厅被罚款近10万元</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/18/5/28/n10433186.md#1">维州政府承诺打击不良雇主 克扣工资最高可判10年</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/18/5/29/n10436312.md#1">墨尔本板球场清洁工被克扣工资 公司遭罚逾13万</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/19/1/23/n10995594.md#1">克扣雇员工资 墨市华人雇主被罚款逾30万</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/25/n12709524.md#1">南澳今明两年将迎来“婚礼潮”</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/25/n12709517.md#1">2021年南澳非公立学校限制学费涨幅</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/3/n8165054.md#1">韩国清洁工时薪15元 悉尼雇主称“社区行情”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/1/27/n8751969.md#1">Pizza Hut克扣送餐司机? 送一次外卖仅挣不到6元</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/8/19/n9545213.md#1">年轻打工族现状：收入低安全隐患多</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/11/28/n9901520.md#1">澳洲公司克扣工资遭罚 官方鼓励留学生维权</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/4/9/n10287840.md#1">克扣工资 著名意大利餐厅被罚款近10万元</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/28/n10433186.md#1">维州政府承诺打击不良雇主 克扣工资最高可判10年</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/29/n10436312.md#1">墨尔本板球场清洁工被克扣工资 公司遭罚逾13万</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/23/n10995594.md#1">克扣雇员工资 墨市华人雇主被罚款逾30万</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741385.md#1">法律专家吁加强移民工人保护 防止雇主剥削</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741365.md#1">伪装成受害者行骗 悉尼女第100次犯罪被判刑</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/30/n10882697.md#1" target="_blank">谢显宁：董时进、董时光兄弟生死劫</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488663.md#1" target="_blank">寻获生命真谛 法国医院院长分享修炼感悟</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/6/n11029000.md#1" target="_blank">林辉：救了毛周的人 结局大多很惨</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/5/28/n4165491.md#1" target="_blank">生命在 信仰在</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12706624.md#1">【解密时分】诺查丹玛斯预言：彭斯和美国大选</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12704671.md#1">新航班机在瑞士降落 乘客拍到UFO</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12706868.md#1">2021预测：全球瘟疫更具毁灭性 善恶大决战</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12707590.md#1">史前文明：地球上真的生活着三种人？</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/8/n12675378.md#1">二岁童天天礼佛打坐说前生 总统转生人人争睹</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12706290.md#1">【时事军事】最强防空导弹 在以色列空袭中沉默</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12706729.md#1">车评：高气压的蓝天 2021 Mazda3 2.5 Turbo</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/24/n12708316.md#1">【唐青看时事】北京内斗 台海挑衅 习拜博弈</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12706824.md#1">【西岸观察】不忍士兵睡车库 川普开放自家宾馆</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12706720.md#1">【唐青看时事】习近平五军压境 拜登蒙在鼓里？</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/23/n12706624.md#1">【解密时分】诺查丹玛斯预言：彭斯和美国大选</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12706233.md#1">霍建华拍完《如懿传》后便沉寂？导演爆秘辛</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12705064.md#1">法比欧当台湾女婿 示范拿手菜满足未婚妻的胃</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/21/n12703721.md#1">撑警陈百祥违反限聚令 5千港人联署促警严查</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12706385.md#1">章子怡首拍剧穿帮？古装裙下露出精品运动鞋</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/21/n12701582.md#1">《捍卫救援》影评：退伍老兵仍能力抗毒枭集团</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12704671.md#1">新航班机在瑞士降落 乘客拍到UFO</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12704952.md#1">2021年1月21日很特殊 百年一遇</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12704480.md#1">大批人感染后 病毒就会消失？群体免疫3大疑虑</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/22/n12706342.md#1">8大穴位抗病毒 一个方法比穴位按摩更好</a></li>
-<li><a href="https://github.com/faflev3861/djy/blob/master/gb/21/1/24/n12708389.md#1">加拿大女子梦游 丈夫拍下爆笑画面</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741053.md#1">【财商天下】大陆消费和信贷塌方 失业率创新高</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740913.md#1">【时事军事】俄军与M777第一次对话 就尝到滋味</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/faflev3861/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/faflev3861/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/6/3/n11297260.htm">新州寿司店前老板克扣工资被罚逾38万</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/6/3/n11297260.htm">新州寿司店前老板克扣工资被罚逾38万</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/faflev3861/djy/blob/master/gb/19/6/3/n11297260.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/faflev3861/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/faflev3861/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/faflev3861/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/faflev3861/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/faflev3861/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/19/6/3/n11297260.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
